--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@babel/preset-react": "^7.9.4",
     "@babel/preset-typescript": "^7.9.0",
     "babel-loader": "^8.1.0",
+    "copy-webpack-plugin": "^8.1.1",
     "electron": "^8.2.2",
     "electron-builder": "^22.7.0",
     "html-webpack-plugin": "^4.2.0",
