--- a/package.json
+++ b/package.json
@@ -35,9 +35,12 @@
     "@babel/preset-typescript": "^7.9.0",
     "babel-loader": "^8.1.0",
     "copy-webpack-plugin": "^8.1.1",
+    "css-loader": "^5.2.2",
     "electron": "^8.2.2",
     "electron-builder": "^22.7.0",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.2.0",
+    "style-loader": "^2.0.0",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
