--- a/package.json
+++ b/package.json
@@ -30,10 +30,15 @@
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
+    "@babel/plugin-proposal-decorators": "^7.13.15",
+    "@babel/plugin-transform-runtime": "^7.13.15",
     "@babel/preset-env": "^7.9.5",
     "@babel/preset-react": "^7.9.4",
     "@babel/preset-typescript": "^7.9.0",
     "babel-loader": "^8.1.0",
+    "babel-plugin-const-enum": "^1.0.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-typescript-metadata": "^0.3.2",
     "copy-webpack-plugin": "^8.1.1",
     "css-loader": "^5.2.2",
     "electron": "^8.2.2",
@@ -51,6 +56,8 @@
     "concurrently": "^6.0.2",
     "cross-env": "^7.0.3",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "reflect-metadata": "^0.1.13",
+    "tsyringe": "^4.5.0"
   }
 }
