--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,9 @@
     "outDir": "./dist",
     "strict": true ,
     "esModuleInterop": true,
+    "downlevelIteration": true,
+    "noImplicitAny": false,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
   }
 }
